Added button for updating grade percentages

--- a/index.html
+++ b/index.html
@@ -11,29 +11,48 @@
 <body>
     <header>
         <h1>Grade Settings</h1>
+        <p>Enter the lowest percentage for each grade</p>
     </header>
-    <div class="gradeselection">
-        <div class="grade">
-            <a>A - 89.5%</a>
-            <input type="text" id="agrade">
+    <form id="gradeForm">
+        <div class="gradeselection">
+            <div class="grade">
+                <div>
+                    <a>A - </a>
+                    <a>89.5%</a>
+                </div>
+                <input type="number" id="aGrade">
+            </div>
+            <div class="grade">
+                <div>
+                    <a>B - </a>
+                    <a>79.5%</a>
+                </div>
+                <input type="number" id="bGrade">
+            </div>
+            <div class="grade">
+                <div>
+                    <a>C - </a>
+                    <a>69.5%</a>
+                </div>
+                <input type="number" id="cGrade">
+            </div>
+            <div class="grade">
+                <div>
+                    <a>D - </a>
+                    <a>59.5%</a>
+                </div>
+                <input type="number" id="dGrade">
+            </div>
+            <div class="grade">
+                <div>
+                    <a>F - </a>
+                    <a>0%</a>
+                </div>
+                <input type="number" id="fGrade">
+            </div>
         </div>
-        <div class="grade">
-            <a>B - 79.5%</a>
-            <input type="text" id="bgrade">
-        </div>
-        <div class="grade">
-            <a>C - 69.5%</a>
-            <input type="text" id="cgrade">
-        </div>
-        <div class="grade">
-            <a>D - 59.5%</a>
-            <input type="text" id="dgrade">
-        </div>
-        <div class="grade">
-            <a>F - 0%</a>
-            <input type="text" id="fgrade">
-        </div>
-    </div>
+        <button type="button" id="updateGradesBtn">Update Percentages</button>
+    </form>
     <main>
 
     </main>
