Added classes for inputs

--- a/index.html
+++ b/index.html
@@ -18,37 +18,37 @@
             <div class="grade">
                 <div>
                     <a>A - </a>
-                    <a>89.5%</a>
+                    <a id="aPercent">89.5%</a>
                 </div>
-                <input type="number" id="aGrade">
+                <input type="number" class="gradeInput" id="aGrade">
             </div>
             <div class="grade">
                 <div>
                     <a>B - </a>
-                    <a>79.5%</a>
+                    <a id="bPercent">79.5%</a>
                 </div>
-                <input type="number" id="bGrade">
+                <input type="number" class="gradeInput" id="bGrade">
             </div>
             <div class="grade">
                 <div>
                     <a>C - </a>
-                    <a>69.5%</a>
+                    <a id="cPercent">69.5%</a>
                 </div>
-                <input type="number" id="cGrade">
+                <input type="number" class="gradeInput" id="cGrade">
             </div>
             <div class="grade">
                 <div>
                     <a>D - </a>
-                    <a>59.5%</a>
+                    <a id="dPercent">59.5%</a>
                 </div>
-                <input type="number" id="dGrade">
+                <input type="number" class="gradeInput" id="dGrade">
             </div>
             <div class="grade">
                 <div>
                     <a>F - </a>
-                    <a>0%</a>
+                    <a id="fPercent">0%</a>
                 </div>
-                <input type="number" id="fGrade">
+                <input type="number" class="gradeInput" id="fGrade">
             </div>
         </div>
         <button type="button" id="updateGradesBtn">Update Percentages</button>
