Added placeholders for each percentage inputs

--- a/index.html
+++ b/index.html
@@ -20,35 +20,35 @@
                     <a>A - </a>
                     <a id="aPercent">89.5%</a>
                 </div>
-                <input type="number" class="gradeInput" id="aGrade">
+                <input type="number" class="gradeInput" id="aGrade" placeholder="89.5">
             </div>
             <div class="grade">
                 <div>
                     <a>B - </a>
                     <a id="bPercent">79.5%</a>
                 </div>
-                <input type="number" class="gradeInput" id="bGrade">
+                <input type="number" class="gradeInput" id="bGrade" placeholder="79.5">
             </div>
             <div class="grade">
                 <div>
                     <a>C - </a>
                     <a id="cPercent">69.5%</a>
                 </div>
-                <input type="number" class="gradeInput" id="cGrade">
+                <input type="number" class="gradeInput" id="cGrade" placeholder="69.5">
             </div>
             <div class="grade">
                 <div>
                     <a>D - </a>
                     <a id="dPercent">59.5%</a>
                 </div>
-                <input type="number" class="gradeInput" id="dGrade">
+                <input type="number" class="gradeInput" id="dGrade" placeholder="59.5">
             </div>
             <div class="grade">
                 <div>
                     <a>F - </a>
                     <a id="fPercent">0%</a>
                 </div>
-                <input type="number" class="gradeInput" id="fGrade">
+                <input type="number" class="gradeInput" id="fGrade" placeholder="0">
             </div>
         </div>
         <button type="button" id="updateGradesBtn">Update Percentages</button>
